  META.yml
- add some Mac OS X notes to the README

0.45 Mon 30 May 2005
- t/t105gif.t wasn't handling buggy giflibs correctly

0.45_01
- give the colorcount() and maxcolors() methods their own entries and
  add them to the method index.
- added tiff_bitspersample and tiff_photometric tags to tiff images
  when read
- loading filter DLLs/DSOs had an off-by-one error allocating a buffer
  for the filename of the library (does anyone use this functionality?)
- remove old #if 0 code from Imager.xs
- convert t/t15color.t to Test::More
- prevent warnings when looking up a GIMP color with no palette
  parameter and $ENV{HOME} not set.
- added VERSION numbers to most .pms
- convert t/t104ppm.t to Test::More
- convert t/t107bmp.t to Test::More
- convert t/t108tga.t to Test::More
- error messages generated reading JPEG or PNG images are now
  available via errstr()
- implement/test/document set_file_limits()/get_file_limits() methods,
  which allow limits on the size of image files read.
- new example for convert() method based on Leolo's query
- implement getscanline(), setscanline() and getsamples() methods.
  These are low level methods for fast access to image data, based on
  existing C functions that Imager uses internally.
- limit limits.c to C89
- the gif tests weren't skipping enough when there was no gif support
- move include t1lib out of image.h to font.c, since nothing it 
  provides is needed elsewhere.
- minor POD fixes
- added a brief tutorial
- Imager::Font->new() for the tt (Freetype 1.x) driver now correctly
  handles errors from i_tt_new(), and passed error messages now 
  generated by i_tt_new().
- renamed lib/Imager/Cookbook.pm to lib/Imager/Cookbook.pod - CPANTS
  complains about it not having 'use strict;'

=================================================================

        For latest versions check the Imager-devel pages:
        http://imager.perl.org/

=================================================================
