@@ -1147,6 +1147,7 @@ Revision history for Perl extension Imager.
   generated by i_tt_new().
 - renamed lib/Imager/Cookbook.pm to lib/Imager/Cookbook.pod - CPANTS
   complains about it not having 'use strict;'
+- add samples/replace_color.pl
 
 =================================================================
 
